--- a/index.html
+++ b/index.html
@@ -308,7 +308,7 @@
       <button class="learn-btn">Learn More</button>
     </div>
     <div class="action-img">
-      <img src="https://placehold.co/600x400/2A2A4A/E0E0E0?text=Webflow+Conf+2022+Screenshot" alt="Demo Screenshot">
+      <img src="ui/action.png">
     </div>
   </section>
 
@@ -321,47 +321,23 @@
       <div class="stats-item"><span>95%</span><span>Satisfaction Rate</span></div>
     </div>
   </section>
-
-  <!-- Testimonials -->
-  <section class="testimonials">
-    <h2>What our users say</h2>
-    <div class="test-grid">
-      <!-- Card x3 -->
-      <div class="testimonial-card">
-        <div class="stars">&#9733;&#9733;&#9733;&#9733;&#9733;</div>
-        <h3>Loved by Designers</h3>
-        <p>This template instantly leveled up our presence.</p>
-        <div class="author">
-          <img src="https://placehold.co/40x40/6366f1/FFFFFF?text=AV" alt="Avatar">
-          <div class="info"><p>Studio Vertex</p><p>CEO</p></div>
+  <section class="reviews-section">
+    <div class="reviews-container">
+        <div class="review-card">
+            </div>
+            <div class="reviewer-info">
+                <img src="ui/review.png">
+                <div class="reviewer-details">
+                </div>
+            </div>
         </div>
-      </div>
-      <div class="testimonial-card">
-        <div class="stars">&#9733;&#9733;&#9733;&#9733;&#9733;</div>
-        <h3>Loved by Designers</h3>
-        <p>This template instantly leveled up our presence.</p>
-        <div class="author">
-          <img src="https://placehold.co/40x40/6366f1/FFFFFF?text=AV" alt="Avatar">
-          <div class="info"><p>Studio Vertex</p><p>CEO</p></div>
         </div>
-      </div>
-      <div class="testimonial-card">
-        <div class="stars">&#9733;&#9733;&#9733;&#9733;&#9733;</div>
-        <h3>Loved by Designers</h3>
-        <p>This template instantly leveled up our presence.</p>
-        <div class="author">
-          <img src="https://placehold.co/40x40/6366f1/FFFFFF?text=AV" alt="Avatar">
-          <div class="info"><p>Studio Vertex</p><p>CEO</p></div>
-        </div>
-      </div>
-    </div>
   </section>
-
-  <!-- Final CTA -->
+    <!-- Final CTA -->
   <section class="final-cta">
     <h2>Ready to focus better</h2>
     <p>"This template instantly leveled up our presence." – Studio Vertex</p>
-    <img src="https://placehold.co/1000x500/2A2A4A/E0E0E0?text=Webflow+Conf+Full+Screenshot" alt="Full Screenshot">
+    <img src="Assets/wc-big.png">
   </section>
 
   <!-- Contact -->
